--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
     "version": "1.0.0",
     "description": "weapon boost calculator",
     "scripts": {
+        "dbfetch": "gsjson 1WukImTldeM-5DyA0ecsu6P-l2U_gww1agF8aM2ebwjA js/db.json -ab --hash id",
         "lite": "lite-server -–port 10001",
         "start": "npm run lite"
     },
     "author": "Zeka",
     "license": "ISC",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/Zekareisoujin/MFFWeaponCalc.git"
+    },
     "devDependencies": {
+        "google-spreadsheet-to-json": "^1.0.0",
         "lite-server": "^1.3.1"
     }
 }
